# pushswap

./: CMakeLists.txt  Makefile  a.out  checker  checker_  main.c  push_swap  push_swap.h  pyviz.py
checker/: Makefile  main.c
include/: checker.h  push_swap.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_free_tab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  (+15 more)
libft/ft_printf/: ft_flags.c  ft_get_prec_width.c  ft_print_c_str.c  ft_print_int.c  ft_print_p_u_x.c  ft_print_percent.c  ft_printf.c  ft_put_field_and_prec.c
libft/include/: ft_printf.h  libft.h
mychecker/: Makefile
srcs/: ft_basic_action.c  ft_free_exit.c  ft_lst_func.c  ft_parsing.c  ft_parsing2.c  ft_set_pos.c  ft_sort3.c  ft_sort5.c  ft_sort_chunk.c  ft_utils.c  ft_utils2.c  main.c
