cmake_minimum_required(VERSION 3.16)
project(pushswap C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)

add_executable(pushswap
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_free_tab.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_flags.c
        libft/ft_printf/ft_get_prec_width.c
        libft/ft_printf/ft_print_c_str.c
        libft/ft_printf/ft_print_int.c
        libft/ft_printf/ft_print_p_u_x.c
        libft/ft_printf/ft_print_percent.c
        libft/ft_printf/ft_put_field_and_prec.c
        libft/ft_swap.c
        libft/ft_u_itoa.c
        libft/ft_u_itoa_base.c
        libft/ft_ullitoa_base.c
        libft/get_next_line.c
        libft/include/libft.h
        srcs/main.c
        srcs/ft_lst_func.c
        srcs/ft_parsing.c
        srcs/ft_parsing2.c
        srcs/ft_set_pos.c
        srcs/ft_basic_action.c
        srcs/ft_free_exit.c
        srcs/ft_sort3.c
        srcs/ft_sort5.c
        srcs/ft_utils.c
        srcs/ft_utils2.c
        srcs/ft_sort_chunk.c
        include/push_swap.h)
